--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,265 @@ body {
     max-width: 960px;
     width: 100%;
 }
+
+/*Landing page layout */
+
+/*header*/
+header
+{
+    overflow: hidden;
+    padding: 40px;
+}
+
+h1
+{
+    float: left;
+}
+
+nav
+{
+    float: right;
+}
+
+nav li 
+{
+    display: inline; 
+}
+
+nav li a
+{
+    text-decoration: none;  
+    margin: 4px;
+}
+
+
+
+/* hero overview section */
+.overview-hero
+{
+    padding: 40px;
+}
+
+.overview-hero-image img
+{
+    float: left;
+    height: 100px;
+    width: 100px;
+    padding: 10px;
+}
+
+
+
+/*learn about section */
+.learn-about
+{
+    padding: 50px;
+}
+
+.cards 
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+}
+
+.card-body
+{
+    text-align: center;
+    padding: 10px;
+}
+
+.card img
+{
+    height: 150px;
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
+
+
+/*testing section */
+.testing
+{
+    padding: 20px;
+    margin: 1rem;
+    display: flex;
+}
+
+.cta .btn
+{
+    float: right;
+}
+
+.testing-desciption
+{
+    width: 500px;
+}
+
+
+
+
+/* recent stories section */
+article img
+{
+
+    float: left;
+    height: 155px;
+    width: 155px;
+    padding: 40px;
+}
+
+article .article-body
+{
+    padding: 10px;
+    width: 700px;
+    text-align: left;
+}
+
+
+
+
+/*newsletter section */
+.newsletter
+{
+    padding: 20px;
+    text-align: center;
+    margin: 1rem;
+}
+
+.form-group #email
+{
+    margin: 5px;
+}
+
+.newsletter .btn
+{
+    margin: 5px;
+}
+
+form
+{
+    text-align: center;
+    display: inline-flex;
+}
+
+
+
+
+
+
+/* colours and fonts */
+
+body
+{
+    font-family: "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", Arial, "NotoSans", "sans-serif";
+}
+
+/* header sec */
+header
+{
+   background-color: white;
+   font-size: 18px;
+}
+
+nav a
+{
+    color: #6b7280;
+}
+
+nav a:hover 
+{
+    color: #5A67D8;
+}
+
+
+
+/* hero overview sec */
+.overview-hero 
+{
+    background-color: #E2E8F0;
+}
+
+/* learn about sec */
+.learn-about h2
+{
+    font-size: 24px;
+    color: #48BB78;
+}
+
+.cards .card
+{
+    border-color: #E2E8F0;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);  
+}
+
+.card h3
+{
+    color: #48BB78;
+    font-size: 21px;
+}
+
+
+
+/* covid 19 testing sec */
+.testing
+{
+    background-color: #4A5568;
+    color: white;
+}
+
+.cta .btn
+{
+    background-color: #48BB78;
+    border-radius: 5px;
+}
+
+
+
+/* recent stories sec */
+.stories h2
+{
+    color: #5A67D8;
+}
+
+.stories article p a 
+{
+    color: #5A67D8;
+}
+
+.article-body h3
+{
+    font-size: 18px;
+}
+
+.stories img
+{
+    border-radius: 50%;
+}
+
+
+
+/* newsletter sec */
+.newsletter
+{
+    background-color: #48BB78;
+    color: white;
+}
+
+.newsletter .btn
+{
+    background-color: #5A67D8;
+}
+
+
+
+/* footer sec */
+footer
+{
+    background-color: #4A5568;
+    color: white;
+}
